BKooL/HB/src/main/bkool/parser/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'void'", "'boolean'", "'float'", 
                     "'string'", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'\\'", "'%'", "'||'", "'&&'", "'!'", 
                     "'='", "':='", "'!='", "'=='", "'<'", "'>'", "'<='", 
                     "'>='", "'^'", "'new'", "'this'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "';'", "':'", "','", "'.'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'return'", 
                     "'class'", "'nil'", "'extends'", "'if'", "'then'", 
                     "'else'", "'for'", "'to'", "'downto'", "'do'", "'break'", 
                     "'continue'", "'final'", "'static'" ]

    symbolicNames = [ "<INVALID>", "INTTYPE", "VOIDTYPE", "BOOLTYPE", "FLOATTYPE", 
                      "STRINGTYPE", "LINE_CMT", "BLOCK_CMT", "ADD", "SUB", 
                      "MUL", "FLOATDIV", "INTDIV", "MOD", "OR", "AND", "NOT", 
                      "EQUAL", "ASSIGN", "NOTEQ", "EQ", "LESS", "GREATER", 
                      "LESSOREQ", "GREATEROREQ", "CONCAT", "NEW", "THIS", 
                      "LB", "RB", "LP", "RP", "LSB", "RSB", "SEMI", "COLON", 
                      "COMMA", "DOT", "INTLIT", "FLOATLIT", "BOOLLIT", "STRINGLIT", 
                      "RETURN", "CLASS", "NIL", "EXTENDS", "IF", "THEN", 
                      "ELSE", "FOR", "TO", "DOWNTO", "DO", "BREAK", "CONTINUE", 
                      "FINAL", "STATIC", "ID", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_classdecl = 1
    RULE_member = 2
    RULE_memberlist = 3
    RULE_membertail = 4
    RULE_attribute = 5
    RULE_attdecl = 6
    RULE_attdecllist = 7
    RULE_method = 8
    RULE_paraml = 9
    RULE_paramtail = 10
    RULE_param = 11
    RULE_alltype = 12
    RULE_pctype = 13
    RULE_arraytype = 14
    RULE_expl = 15
    RULE_explist = 16
    RULE_expr = 17
    RULE_expr2 = 18
    RULE_expr1 = 19
    RULE_operand = 20
    RULE_index = 21
    RULE_method_access = 22
    RULE_att_access = 23
    RULE_statement = 24
    RULE_blockstatement = 25
    RULE_insidestatement = 26
    RULE_decllist = 27
    RULE_decltail = 28
    RULE_statementlist = 29
    RULE_statementtail = 30
    RULE_decl_stm = 31
    RULE_assign_stm = 32
    RULE_if_stm = 33
    RULE_for_stm = 34
    RULE_break_stm = 35
    RULE_continue_stm = 36
    RULE_return_stm = 37
    RULE_method_stm = 38
    RULE_arraylit = 39
    RULE_literals = 40

    ruleNames =  [ "program", "classdecl", "member", "memberlist", "membertail", 
                   "attribute", "attdecl", "attdecllist", "method", "paraml", 
                   "paramtail", "param", "alltype", "pctype", "arraytype", 
                   "expl", "explist", "expr", "expr2", "expr1", "operand", 
                   "index", "method_access", "att_access", "statement", 
                   "blockstatement", "insidestatement", "decllist", "decltail", 
                   "statementlist", "statementtail", "decl_stm", "assign_stm", 
                   "if_stm", "for_stm", "break_stm", "continue_stm", "return_stm", 
                   "method_stm", "arraylit", "literals" ]

    EOF = Token.EOF
    INTTYPE=1
    VOIDTYPE=2
    BOOLTYPE=3
    FLOATTYPE=4
    STRINGTYPE=5
    LINE_CMT=6
    BLOCK_CMT=7
    ADD=8
    SUB=9
    MUL=10
    FLOATDIV=11
    INTDIV=12
    MOD=13
    OR=14
    AND=15
    NOT=16
    EQUAL=17
    ASSIGN=18
    NOTEQ=19
    EQ=20
    LESS=21
    GREATER=22
    LESSOREQ=23
    GREATEROREQ=24
    CONCAT=25
    NEW=26
    THIS=27
    LB=28
    RB=29
    LP=30
    RP=31
    LSB=32
    RSB=33
    SEMI=34
    COLON=35
    COMMA=36
    DOT=37
    INTLIT=38
    FLOATLIT=39
    BOOLLIT=40
    STRINGLIT=41
    RETURN=42
    CLASS=43
    NIL=44
    EXTENDS=45
    IF=46
    THEN=47
    ELSE=48
    FOR=49
    TO=50
    DOWNTO=51
    DO=52
    BREAK=53
    CONTINUE=54
    FINAL=55
    STATIC=56
    ID=57
    WS=58
    ERROR_CHAR=59
    UNCLOSE_STRING=60
    ILLEGAL_ESCAPE=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def classdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ClassdeclContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ClassdeclContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 82
                self.classdecl()
                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.CLASS):
                    break

            self.state = 87
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def memberlist(self):
            return self.getTypedRuleContext(BKOOLParser.MemberlistContext,0)


        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_classdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassdecl" ):
                return visitor.visitClassdecl(self)
            else:
                return visitor.visitChildren(self)




    def classdecl(self):

        localctx = BKOOLParser.ClassdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(BKOOLParser.CLASS)
            self.state = 90
            self.match(BKOOLParser.ID)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EXTENDS:
                self.state = 91
                self.match(BKOOLParser.EXTENDS)
                self.state = 92
                self.match(BKOOLParser.ID)


            self.state = 95
            self.match(BKOOLParser.LP)
            self.state = 96
            self.memberlist()
            self.state = 97
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(BKOOLParser.AttributeContext,0)


        def method(self):
            return self.getTypedRuleContext(BKOOLParser.MethodContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = BKOOLParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_member)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.attribute()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.method()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(BKOOLParser.MemberContext,0)


        def membertail(self):
            return self.getTypedRuleContext(BKOOLParser.MembertailContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_memberlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberlist" ):
                return visitor.visitMemberlist(self)
            else:
                return visitor.visitChildren(self)




    def memberlist(self):

        localctx = BKOOLParser.MemberlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_memberlist)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.INTTYPE, BKOOLParser.VOIDTYPE, BKOOLParser.BOOLTYPE, BKOOLParser.FLOATTYPE, BKOOLParser.STRINGTYPE, BKOOLParser.FINAL, BKOOLParser.STATIC, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.member()
                self.state = 104
                self.membertail()
                pass
            elif token in [BKOOLParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MembertailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(BKOOLParser.MemberContext,0)


        def membertail(self):
            return self.getTypedRuleContext(BKOOLParser.MembertailContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_membertail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMembertail" ):
                return visitor.visitMembertail(self)
            else:
                return visitor.visitChildren(self)




    def membertail(self):

        localctx = BKOOLParser.MembertailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_membertail)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.INTTYPE, BKOOLParser.VOIDTYPE, BKOOLParser.BOOLTYPE, BKOOLParser.FLOATTYPE, BKOOLParser.STRINGTYPE, BKOOLParser.FINAL, BKOOLParser.STATIC, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.member()
                self.state = 110
                self.membertail()
                pass
            elif token in [BKOOLParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alltype(self):
            return self.getTypedRuleContext(BKOOLParser.AlltypeContext,0)


        def attdecllist(self):
            return self.getTypedRuleContext(BKOOLParser.AttdecllistContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = BKOOLParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.STATIC:
                    self.state = 115
                    self.match(BKOOLParser.STATIC)


                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.FINAL:
                    self.state = 118
                    self.match(BKOOLParser.FINAL)


                self.state = 121
                self.alltype()
                self.state = 122
                self.attdecllist()
                self.state = 123
                self.match(BKOOLParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(BKOOLParser.FINAL)
                self.state = 126
                self.match(BKOOLParser.STATIC)
                self.state = 127
                self.alltype()
                self.state = 128
                self.attdecllist()
                self.state = 129
                self.match(BKOOLParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def EQUAL(self):
            return self.getToken(BKOOLParser.EQUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttdecl" ):
                return visitor.visitAttdecl(self)
            else:
                return visitor.visitChildren(self)




    def attdecl(self):

        localctx = BKOOLParser.AttdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(BKOOLParser.ID)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EQUAL:
                self.state = 134
                self.match(BKOOLParser.EQUAL)
                self.state = 135
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttdecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attdecl(self):
            return self.getTypedRuleContext(BKOOLParser.AttdeclContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.COMMA)
            else:
                return self.getToken(BKOOLParser.COMMA, i)

        def attdecllist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.AttdecllistContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.AttdecllistContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attdecllist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttdecllist" ):
                return visitor.visitAttdecllist(self)
            else:
                return visitor.visitChildren(self)




    def attdecllist(self):

        localctx = BKOOLParser.AttdecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attdecllist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.attdecl()
            self.state = 143
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 139
                    self.match(BKOOLParser.COMMA)
                    self.state = 140
                    self.attdecllist() 
                self.state = 145
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alltype(self):
            return self.getTypedRuleContext(BKOOLParser.AlltypeContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def paraml(self):
            return self.getTypedRuleContext(BKOOLParser.ParamlContext,0)


        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def blockstatement(self):
            return self.getTypedRuleContext(BKOOLParser.BlockstatementContext,0)


        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_method

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):

        localctx = BKOOLParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_method)
        self._la = 0 # Token type
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.STATIC:
                    self.state = 146
                    self.match(BKOOLParser.STATIC)


                self.state = 149
                self.alltype()
                self.state = 150
                self.match(BKOOLParser.ID)
                self.state = 151
                self.match(BKOOLParser.LB)
                self.state = 152
                self.paraml()
                self.state = 153
                self.match(BKOOLParser.RB)
                self.state = 154
                self.blockstatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(BKOOLParser.ID)
                self.state = 157
                self.match(BKOOLParser.LB)
                self.state = 158
                self.paraml()
                self.state = 159
                self.match(BKOOLParser.RB)
                self.state = 160
                self.blockstatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(BKOOLParser.ParamContext,0)


        def paramtail(self):
            return self.getTypedRuleContext(BKOOLParser.ParamtailContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_paraml

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParaml" ):
                return visitor.visitParaml(self)
            else:
                return visitor.visitChildren(self)




    def paraml(self):

        localctx = BKOOLParser.ParamlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paraml)
        try:
            self.state = 168
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.INTTYPE, BKOOLParser.VOIDTYPE, BKOOLParser.BOOLTYPE, BKOOLParser.FLOATTYPE, BKOOLParser.STRINGTYPE, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.param()
                self.state = 165
                self.paramtail()
                pass
            elif token in [BKOOLParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamtailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def param(self):
            return self.getTypedRuleContext(BKOOLParser.ParamContext,0)


        def paramtail(self):
            return self.getTypedRuleContext(BKOOLParser.ParamtailContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_paramtail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamtail" ):
                return visitor.visitParamtail(self)
            else:
                return visitor.visitChildren(self)




    def paramtail(self):

        localctx = BKOOLParser.ParamtailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramtail)
        try:
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.SEMI]:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.match(BKOOLParser.SEMI)
                self.state = 171
                self.param()
                self.state = 172
                self.paramtail()
                pass
            elif token in [BKOOLParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alltype(self):
            return self.getTypedRuleContext(BKOOLParser.AlltypeContext,0)


        def attdecllist(self):
            return self.getTypedRuleContext(BKOOLParser.AttdecllistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = BKOOLParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.alltype()
            self.state = 178
            self.attdecllist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlltypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pctype(self):
            return self.getTypedRuleContext(BKOOLParser.PctypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(BKOOLParser.ArraytypeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_alltype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlltype" ):
                return visitor.visitAlltype(self)
            else:
                return visitor.visitChildren(self)




    def alltype(self):

        localctx = BKOOLParser.AlltypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_alltype)
        try:
            self.state = 182
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.pctype()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.arraytype()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

